spacing on headers and featured raffle fix

--- a/src/index.css
+++ b/src/index.css
@@ -198,7 +198,7 @@ header a:hover {
     margin: auto;
     list-style: none;
     display: inline;
-    padding: 10px;
+    padding: 15px;
     text-decoration: none;
     color: #ffffff;
 }
